--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,8 @@
     android:background="#f0f0f0"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/level_title_layout"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:paddingTop="10dp"
-        android:orientation="horizontal"
-        android:background="#FFFFFF"/>
-    <com.sxu.levellayout.LevelView
-        android:id="@+id/level_view"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:background="#FFFFFF"
-        level:thumb="@drawable/star_3"
-        level:thumbWidth="30dp"
-        level:thumbHeight="30dp"
-        level:pointRadius="6dp"
-        level:pointColor="#eeeeee"
-        level:lineWidth="4dp"
-        level:lineColor="#eeeeee"
-        level:stepCount="3"
-        level:defaultPos="2"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
