解决高度计算不准确的问题

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -26,7 +26,7 @@
         level:thumbHeight="30dp"
         level:pointRadius="6dp"
         level:pointColor="#eeeeee"
-        level:lineWidth="4dp"
+        level:lineHeight="4dp"
         level:lineColor="#eeeeee"
         level:stepCount="3"
         level:defaultPos="2"/>
